by Sagar for button alignment issue

--- a/Invessence_20170604/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence_20170604/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -1128,7 +1128,7 @@ thead > tr > .multipleSelectionChkList > .ui-chkbox > .ui-chkbox-box {
 .ui-confirm-dialog .ui-dialog-footer {
 	background: #fff!important;
 	border-top: 0!important;
-	padding: 0px 55px!important;
+	padding: 1px 55px!important;
 }
 
 .ui-confirm-dialog .ui-button {
